--- a/personal.html
+++ b/personal.html
@@ -21,8 +21,7 @@
 <body>
     <table align="center">
         <tr>
-            <!-- 简历上的图片 -->
-            <td align="center"><img border=0 style="border-radius:8px;" height="100%" width=180
+            <td align="center"><img border=0 style="border-radius:8px;" height="180" width=180
                     src="assets/img/avatar.jpg"></td>
             <td align="center">&nbsp</td>
             <td align="center">&nbsp</td>
@@ -30,25 +29,27 @@
             <td align="center">
                 <h2>Haikun Cao</h2>
                 <p>
-                    <font size=+1><b>曹海坤</b><br><br>Master Student<br><a href="http://insis.bjtu.edu.cn/"
-                            target="_blank"><b>INSIS@BJTU</b></a></font>
+                    <font size=+1><b>曹海坤</b></font>
                 </p>
                 <p>
-                    <font size=+1>Email: <a href="mailto:haikun4515@163.com"><i>haikun4515@163.com</i></a></font><br>
+                    <font size=+1>
+                        Master Student<br>
+                        <a href="http://insis.bjtu.edu.cn/" target="_blank"
+                            style="text-decoration: none;"><b>INSIS@BJTU</b></a>
+                    </font>
+
+                </p>
+                <p>
+                    <font size=+1>Email: <a href="mailto:haikun4515@163.com"><i>haikun4515@163.com</i></a></font>
                 </p>
                 <p align="center">
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <!-- GitHub -->
-                    <a href="https://github.com/hishallyi" target="_blank">
-                        <img src="assets\img\github.png" alt="Github" width="60px" />
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://github.com/hishallyi" target="_blank" style="text-decoration: none;">
+                        <img src="assets/img/github.svg" alt="Github" width="30px" />
                     </a>
-                    &nbsp;
-                    <a href="https://twitter.com/zhengtingt25915" target="_blank">
-                        <img src="assets\img\twitter_logo.png" alt="Twitter" width="60px" />
-                    </a>
-                    &nbsp;
-                    <a href="CV\2023-5-22CV.pdf" target="_blank" ,label='CV'>
-                        <img src="assets\img\CV.png" alt="CV" width="25px" />
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://blog.csdn.net/Hi_shallyi" target="_blank" style="text-decoration: none;">
+                        <img src="assets/img/csdn.svg" alt="CSDN" width="30px" />
                     </a>
                 </p>
             </td>
@@ -74,28 +75,32 @@
     <ul>
         <li>
             <font size="4"><b>2024: </b>Nothing!</font>
+        </li><br>
+        <li>
+            <font size="4"><b>2023: </b>Starting My Master's Career!</font>
         </li>
     </ul>
 
-    <br>
     <h2>Selected Publications</h2>
     <hr />
 
-    <br>
     <h2>Awards & Honors</h2>
     <hr />
     <table>
         <tr>
             <td>
                 <p>
-                    <font size="4"><span class="label">&#10148;</span> 06/2023 - </font>
-                    <font size="3">2023 Excellent Graduated Students of Liaoning Province. </font>
+                    <font size="4"><span class="label">&#10148;</span> 07/2023 - </font>
+                    <font size="3"> 2023 Admitted as a Master at Beijing Jiaotong University. </font>
                     <br>
-                    <font size="4"><span class="label">&#10148;</span> 06/2023 - </font>
-                    <font size="3"> 2023 Excellent Graduated Students at Northeastern University. </font>
+                    <font size="4"><span class="label">&#10148;</span> 06/2022 - </font>
+                    <font size="3"> 2022 Excellent Student at Shaanxi Normal University. </font>
                     <br>
-                    <font size="4"><span class="label">&#10148;</span> 10/2021 - </font>
-                    <font size="3"> 2021 Excellent Graduate Students at Northeastern University. </font>
+                    <font size="4"><span class="label">&#10148;</span> 12/2021 - </font>
+                    <font size="3"> 2021 National Encouragement Scholarship at Shaanxi Normal University. </font>
+                    <br>
+                    <font size="4"><span class="label">&#10148;</span> 12/2021 - </font>
+                    <font size="3"> 2021 First prize in Shaanxi Division of the undergraduate group of CUMCM. </font>
                 </p>
             </td>
         </tr>
