--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                             <li class="navigation__item">
                                 <a href="index.html" class="blog-button">Home</a>
                             </li>
-
                             <li class="navigation__item">
                                 <a href="personal.html" class="blog-button">Personal</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="https://docs.hishallyi.top/" class="blog-button" target="_blank">Hishallyi's Blog</a>
                             </li>
                         </ul>
                     </nav>
@@ -48,9 +50,6 @@
                         </a>&nbsp;&nbsp;&nbsp;
                         <a target="_blank" href="https://gitee.com/hishallyi">
                             <img src="assets/img/gitee.png" alt="Gitee" width="30px" />
-                        </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="https://docs.hishallyi.top/">
-                            <img src="assets/img/blog.png" alt="Blog" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
                         <a target="_blank" href="mailto:haikun4515@163.com">
                             <img src="assets/img/mail.png" alt="Email" width="30px" />
