--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a target="_blank" href="mailto:haikun4515@163.com">
                             <img src="assets/img/mail.png" alt="Email" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="https://fireworks.nianbroken.top/">
+                        <a target="_blank" href="fireworks/index.html">
                             <img src="assets/img/fireworks.png" alt="Fireworks" width="30px" />
                         </a>
                     </p>
