optimize image preload

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Hishallyi, Homepage" />
     <meta name="author" content="Hishallyi" />
     <title>Hishallyi</title>
+    <link rel="preload" href="assets/img/bg.png" as="image" />
     <link rel="icon" href="assets/img/beer.svg" />
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
