remove text decoration

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                 </div>
                 <nav>
                     <p class="navigation-icon">
-                        <a target="_blank" href="https://github.com/hishallyi">
+                        <a target="_blank" href="https://github.com/hishallyi" style="text-decoration: none;">
                             <img src="assets/img/github.png" alt="Github" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="https://gitee.com/hishallyi">
+                        <a target="_blank" href="https://gitee.com/hishallyi" style="text-decoration: none;">
                             <img src="assets/img/gitee.png" alt="Gitee" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="mailto:haikun4515@163.com">
+                        <a target="_blank" href="mailto:haikun4515@163.com" style="text-decoration: none;">
                             <img src="assets/img/mail.png" alt="Email" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="/fireworks">
+                        <a target="_blank" href="/fireworks" style="text-decoration: none;">
                             <img src="assets/img/fireworks.png" alt="Fireworks" width="30px" />
                         </a>
                     </p>
