--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a target="_blank" href="https://gitee.com/hishallyi" style="text-decoration: none;">
                             <img src="assets/img/gitee.png" alt="Gitee" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
-                        <a target="_blank" href="mailto:haikun4515@163.com" style="text-decoration: none;">
+                        <a target="_blank" href="mailto:hishallyi@163.com" style="text-decoration: none;">
                             <img src="assets/img/mail.png" alt="Email" width="30px" />
                         </a>&nbsp;&nbsp;&nbsp;
                         <a target="_blank" href="/fireworks" style="text-decoration: none;">
