--- a/personal.html
+++ b/personal.html
@@ -40,7 +40,7 @@
 
                 </p>
                 <p>
-                    <font size=+1>Email: <a href="mailto:haikun4515@163.com"><i>haikun4515@163.com</i></a></font>
+                    <font size=+1>Email: <a href="mailto:hishallyi@163.com"><i>hishallyi@163.com</i></a></font>
                 </p>
                 <p align="center">
                     &nbsp;&nbsp;&nbsp;
